# geometry-calculator

./: main.py  pyproject.toml
