[tool.poetry]
name = "repl_python3_beta_geometry-calculator"
version = "0.1.0"
description = ""
authors = ["182961 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
mpmath = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
